# yaha-ai-game-platform

./: .gitignore  Agent设计与实施.md  README-交付文档.md  Start.md  YAHA项目演示.docx  Yaha互动游戏平台技术方案.md  Yaha互动游戏平台版本迭代计划.md  docker-compose.yml  yaha游戏平台开发任务.md  yaha游戏平台需求分析文档.md  ~$HA项目演示.docx
AI交互文档/: Agent设计与实施.md  Yaha互动游戏平台技术方案.md  Yaha互动游戏平台版本迭代计划.md  yaha游戏平台需求分析文档.md
apps/web/: .env.example  .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/AI交互文档/: yaha游戏平台需求分析文档.md
apps/web/app/: layout.tsx  (+1 more)
services/agent-service/: .env  .env.example  langgraph.json  pyproject.toml  test_storage.py
services/agent-service/agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/agent-service/app/: main.py
services/agent-service/app/agent/: __init__.py  asset_content.py  builder.py  edges.py  graph.py  orchestrator.py  schemas.py  state.py  storage.py  validator.py
services/agent-service/app/agent/nodes/: __init__.py  code_generator_agent.py  code_generator_node.py  fanout_node.py  gameplay_agent.py  narrative_agent.py  retry_workflow.py  supervisor_agent.py  synthesis_agent.py  template_workflow.py  upload_workflow.py  validator_node.py  validator_workflow.py  vision_agent.py
services/agent-service/app/core/: config.py
services/agent-service/app/llm/: __init__.py  client.py  exceptions.py  providers.py
services/agent-service/app/schemas/: generate.py
services/agent-service/tests/: test_generate.py  test_llm_client.py  test_validator.py  前端集成测试游戏生成案例.md
tmp/sample-game/: game.js  index.html  manifest.json  style.css
(+43 files in other folders)
