[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.34",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langgraph>=0.2.0",
    "langsmith>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"